fixed scrollbar

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,6 +6,7 @@ h3 {
   display: flex;
   flex-direction: column;
   font-family: ubuntu;
+  overflow: hidden;
 }
 
 .topHome {
